[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/shaker.gd" type="Script" id=1]

[node name="Shaker" type="Node2D"]
script = ExtResource( 1 )

[node name="shake_tween" type="Tween" parent="."]

[node name="frequency" type="Timer" parent="."]

[node name="duration" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="frequency" to="." method="_on_frequency_timeout"]
[connection signal="timeout" from="duration" to="." method="_on_duration_timeout"]
